[package]
name = "hardlink-deduplicator"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
fasthash = { git = "https://github.com/Joshua-Wright/rust-fasthash/", rev = "bd0ef9b9391ca80d1a115c3207e1f8417bb4c6b9"}
mockall = "0.7.1"